public/css/funky_world_cup.css
html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

#wrapper {
  min-height: 100%;
  position: relative;
}

#navbar img#flag {
  width: 150px;
  vertical-align: top;
  text-align: center;
  display: inherit;
  position: relative;
  left: -5px;
  top: -4px;
}

#navbar a#home-link {
  color: white;
  position: relative;
  top: -8px;
}

#navbar .navbar-header .year {
  color: white;
  width: 100%;
  display: inline-block;
  font-size: 0.5em;
  text-align: right;
  position: relative;
  top: -23px;
  left: -13px;
}

#home-description .social-link {
  text-align: center;
}

.navbar-right .dropdown-toggle, .navbar-right .dropdown-toggle:hover {
  padding: 5px 0;
}
.navbar-right .dropdown-toggle img {
  max-width: 40px;
}

.home-container {
  margin-bottom: 53px;
}

#container {
  padding-bottom: 50px;
}

#sidebar {
  margin-top: 62px;
}
  #score-rank .panel { 
    width: 45%;
  }
  #score-rank .panel-body {
    font-size: 3em;
    text-align: center;
  }

  #create-group {
    width: 100%;
  }

.matches-table {}
  .matches-table td {
    vertical-align: middle !important;
    position: relative;
  }
    .matches-table td img {
      max-width: 70px;
    }
    .matches-table td.team-column {
      text-align: center;
      padding-top: 20px;
      width: 180px;
    }

    .matches-table td.text-center {
      width: 100px;
    }
    .matches-table td.info-column {
      width: 200px;
    }
    .matches-table td .team {
      display: inline-block;
      font-size: 1.2em;
      padding: 0 10px;
      text-transform: uppercase;
      line-height: 35px;
    }
    .matches-table td .time {
      font-size: 1.2em;
    }
    .matches-table td.text-primary {
      font-size: 1.5em;
      font-weight: bold;
    }
    .matches-table td .host-result {
      font-size: 2em;
      vertical-align: top;
      position: absolute;
      left: -40px;
      top: 23px;
      z-index: 999;
    }
    .matches-table td.result {
      vertical-align: top !important;
      padding-top: 35px;
    }

    .matches-table td .rival-result {
      font-size: 2em;
      vertical-align: top;
      position: absolute;
      right: -40px;
      top: 23px;
      z-index: 999;
    }
    .matches-table td .status {
      vertical-align: top;
    }
  
  .matches-table tr.mobile-info {
    display: none;
  }
  .matches-table.small-table {}
    .matches-table.small-table td img {
      max-width: 35px;
    }
    .matches-table.small-table td.team-column {
      text-align: center;
      padding-top: 10px;
      width: 130px;
    }

    .matches-table.small-table td.text-center {
      width: 50px;
    }
    .matches-table.small-table td.info-column {
      font-size: 0.8em;
    }
    .matches-table.small-table td .team {
      display: inline-block;
      font-size: 0.9em;
      padding: 0 5px;
      text-transform: uppercase;
      line-height: 16px;
    }
    .matches-table.small-table td .time {
      font-size: 0.7em;
    }
    .matches-table.small-table td.text-primary {
      font-size: 1.2em;
      font-weight: bold;
    }
    
    .matches-table.small-table td .host-result {
      font-size: 1em;
      vertical-align: top;
      position: absolute;
      left: -20px;
      top: 15px;
      z-index: 999;
    }
    .matches-table.small-table td.result {
      vertical-align: top !important;
      padding-top: 9px;
    }

    .matches-table.small-table td .rival-result {
      font-size: 1em;
      vertical-align: top;
      position: absolute;
      right: -20px;
      top: 15px;
      z-index: 999;
    }
    .matches-table.small-table td .status {
      vertical-align: top;
      font-size: 0.8em;
    }

.fwc-separator {
  height: 1px;
  border-top: 1px solid #666666;
  width: 100%;
  padding: 5px 0;
}

.btn-full-width {
  width: 100%;
}

#new-prize-box {}
  #new-prize-box .col-lg-5 {
    padding-left: 0;
  }
#prizes-list .pager {
  margin: -3px 10px 0 0;
}
#prizes-list .pager li > a {
  padding: 2px 10px;
  font-size: 0.9em;
}

#delete-group {
  margin-right: 10px;
}

.form-inline {
  display: inline;
}

#group-participants-list {
}
  .participant-img {
    width: 25px;
    height: 25px;
    margin: 0 3px;
  }
  #group-participants-list .badge {
    margin-top: 5px;
  }
  #group-participants-list .list-group-item .label {
    display: inline-block;
    padding: 5px;
    min-width: 32px;
    text-align: center;
  }

#group-participants-list.by-owner {
  width: 90%;
}
  #group-participants-list.by-owner li {
    position: relative;
  }
  #group-participants-list.by-owner button.btn-xs {
    position: absolute;
    float: right;
    left: 101%;
  }

.position-table .team-column, .position-table .position-column {
  vertical-align: middle;
}

.position-table img.flag {
  border: solid 1px #DDDDDD;
  width: 20%;
}

.navbar-nav > li.active {
  background-image: linear-gradient(#3e648d, #446e9b 30%, #6d94bf);
}

.fwc-highlight {
  background-color: #fcf8e3 !important;
}

#modal-predict {}

  #modal-predict form td {
    width: 25%;
    text-align: center;
  }
    #modal-predict form td.modal-host, #modal-predict form td.modal-rival {
      padding-top: 20px;
    }
    #modal-predict form td input {
      width: 60px;
      text-align: center;
    }

#predictions-table {}
  #predictions-table th {
    text-align: center;
  }
  #predictions-table td {
    text-align: center;
    vertical-align: middle;
  }
    #predictions-table td img {
      max-width: 30px;
    }

.dashboard-matches h4 {
  display: inline-block;
  width: 49%;
}

.right {
  text-align: right;
}

.dashboard-matches .group {
  padding: 0.3em 0.5em;
  color: #FEFEFE;
  background-color: #3399f3;
  border-radius: 3px;
  display: inline-block;
  font-size: 0.7em;
  margin-right: 0.6em;
}

.disclaimer {
  color: #121212;
}

#positions-legend td {
  width: 10%;
}
/* ... */

